fix: visual bug where table data isn't visible

--- a/styles/Links.module.css
+++ b/styles/Links.module.css
@@ -33,6 +33,7 @@
   border: 1px solid #ccc;
   padding: 15px;
   text-align: left;
+  color: #333;
 }
 
 .table th {
